modify eclipse config

--- a/MyDataStructureAlgorithm/.cproject
+++ b/MyDataStructureAlgorithm/.cproject
@@ -161,6 +161,8 @@
 		<configuration configurationName="Default">
 			<resource resourceType="PROJECT" workspacePath="/MyDataStructureAlgorithm"/>
 		</configuration>
+		<configuration configurationName="Debug"/>
+		<configuration configurationName="Release"/>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets">
